<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/tv_login_frag_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bar_bg_gray"
        android:gravity="center"
        android:text="@string/account_login"
        android:textColor="@color/black"
        android:textSize="18sp" />
    
    <LinearLayout
        android:id="@+id/ll_login_frag_nickname"
        style="@style/accountInputBorder"
        android:layout_below="@id/tv_login_frag_title"
        android:layout_marginTop="18dp"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_nickname"
            android:textColor="@color/grey" />
		<!-- 昵称输入框 -->
        <EditText
            android:id="@+id/et_login_frag_nickname"
            style="@style/accountEditText"
            android:maxLength="15"
            android:ems="15"
            android:hint="@string/account_login_nickname_hint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_login_frag_user"
        style="@style/accountInputBorder"
        android:layout_below="@id/ll_login_frag_nickname"
        android:layout_marginTop="18dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_username"
            android:textColor="@color/grey" />
		<!-- 用户名输入框 -->
        <EditText
            android:id="@+id/et_login_frag_user"
            style="@style/accountEditText"
            android:maxLength="11"
            android:ems="11"
            android:hint="@string/account_login_name_hint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_login_frag_password"
        style="@style/accountInputBorder"
        android:layout_below="@id/ll_login_frag_user"
        android:layout_marginTop="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_password"
            android:textColor="@color/grey" />
		<!-- 密码输入框 -->
        <EditText
            android:id="@+id/et_login_frag_password"
            style="@style/accountEditText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:maxLength="16"
            android:ems="16"
            android:inputType="textPassword"
            android:hint="@string/account_login_password_hint" />

        <Button
            android:id="@+id/bt_login_frag_show"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/btn_show"
            android:text="@string/account_password_show"
            android:textColor="@color/grey"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_login_frag_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/ll_login_frag_password"
        android:layout_marginRight="18dp"
        android:layout_marginTop="15dp"
        android:text="@string/account_login_password_forget"
        android:textColor="@color/green"
        android:visibility="gone"
        android:textSize="14sp" />
    <TextView 
        android:id="@+id/tv_login_frag_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_below="@id/tv_login_frag_forget_password"
        android:visibility="invisible"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_login_frag_msg"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="13dp" >

        <Button
            android:id="@+id/bt_login_frag_login"
            style="@style/accountButtonStyle"
            android:layout_marginRight="4dp"
            android:background="@drawable/btn_add_accounts"
            android:text="@string/account_login_login" />

        <Button
            android:id="@+id/bt_login_frag_regist"
            style="@style/accountButtonStyle"
            android:layout_marginLeft="4dp"
            android:background="@drawable/btn_quick_register"
            android:text="@string/account_login_regist" />
    </LinearLayout>

</RelativeLayout>